# burnrate

./: .gitignore  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src/components/: AddSubscription.tsx  CategoryBar.tsx  EmojiPicker.tsx  Footer.tsx  FuzzySearch.tsx  OverviewRow.tsx  Panel.tsx  SegmentedControl.tsx  ServiceIcon.tsx  Settings.tsx  SubscriptionList.tsx  SubscriptionRow.tsx
src/components/__tests__/: AddSubscription.test.tsx  Footer.test.tsx  FuzzySearch.test.tsx  OverviewRow.test.tsx  ServiceIcon.test.tsx  Settings.test.tsx  SubscriptionList.test.tsx  SubscriptionRow.test.tsx
src/hooks/: useSettings.ts  useSubscriptions.ts
src/hooks/__tests__/: useSettings.test.ts  useSubscriptions.test.ts
src/i18n/: en.json  zh.json
src/i18n/__tests__/: i18n.test.ts
src/lib/: categories.ts  currency.ts  db.ts  format.ts  local-icons.ts  presets.ts
src/lib/__tests__/: currency.test.ts  db.test.ts  format.test.ts  presets.test.ts
src/test/: setup.ts
src/types/: index.ts
website/: package.json  pnpm-lock.yaml
website/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
website/src/components/: AppMockup.tsx  AppShowcase.tsx  BurnShowcase.tsx  Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  Nav.tsx  ProductShowcase.tsx
website/src/lib/: i18n.tsx  icons.ts
